syntax = "proto3";

option csharp_namespace = "Client";

package calc;

service Calculator{
  rpc Calculate (CalculateRequest) returns (CalculateResponse);
}

message CalculateRequest{
  string expression = 1;
}

message CalculateResponse{
  double result = 1;
  string message = 2;
  bool isSuccess = 3;
}